fix: fixed socials navigation flexbox overflow
- change the socials navigation to use grid instead of flexbox for small size devices (less than 768pixels in width)

--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,17 @@ Text Colors: #ffffff, #ffaec0, #9ca3af, #4b5563, #374151, #1f2937, #000000 (Blac
   padding: 0;
 }
 
-.body-container {
+* {
+  outline: 1px solid red;
+}
+
+body {
+  min-height: 100vh;
   font-family: Montserrat, sans-serif;
   background-color: #f9fafb;
-  height: 100vh;
+}
+
+.body-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -303,6 +310,13 @@ figcaption {
     flex-direction: column;
     align-items: center;
     gap: 1px;
+  }
+  .portfolio-summary-info > p {
+    text-align: center;
+  }
+  .main-socials {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
   .featured-works {
     grid-template-columns: 1fr;
